Improve meter OCR and add test runner

--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
               </div>
               <p class="muted">Tip: open Gmail draft, review once more, then press send.</p>
             </section>
+
+            <section class="card qa-card" aria-labelledby="qa-title">
+              <div class="card-head">
+                <h3 id="qa-title">4. Debug the test set</h3>
+                <p class="muted">Runs the local assets test set and reports OCR accuracy.</p>
+              </div>
+              <div class="action-row">
+                <button class="ghost" id="run-test-btn" type="button">Run test set</button>
+                <p class="status" id="test-status">Test set idle.</p>
+              </div>
+              <div class="test-results" id="test-results"></div>
+            </section>
           </div>
         </div>
       </section>
